src/pages/chatmain/OrgadminChatPage/OrgAdminChatPage.css
.orgadminchat-screen {
  margin: 0;
  padding: 0;
}

.orgadminchat-chat-container {
  border-radius: 15px;
  background: var(--Neutral-200, #e2e8f0);
  width: 80vw;
  height: 95%;
  margin-top: 20px;
  /* margin-bottom: 20px; */
  position: relative;
  margin-left: 15px;
  right: 10px;
  padding: 20px;
  padding-bottom: 0px;
}

.orgadminchat-document-card {
  display: flex;
  margin-left: 40px;
  width: 900px;
  height: 90px;
  flex-shrink: 0;
  border-radius: 10.457px;
  background: var(--White, #fff);
  box-shadow: 0px 2.789px 6.972px 3.486px rgba(0, 0, 0, 0.09);
  margin-left: 10px;
}

.orgadminchat-document-upload-text {
  color: var(--Neutral-900, #0f172a);
  font-size: 14px;
  font-style: normal;
  font-weight: 600;
  line-height: 20px;
  margin-left: 15px;
}

.orgadminchat-document-quantity {
  color: var(--Neutral-900, #0f172a);
  font-size: 30px;
  font-style: normal;
  font-weight: 700;
  margin-left: 2px;
  margin-top: 0px;
}

.orgadminchat-chat-content {
  /* margin-top: 5px;
  margin-left: 10px; */
  border-radius: 15px;
  background: var(--Neutral-200, #e2e8f0);
  width: 100vw;
  height: 92vh;
  justify-content: center;
  text-align: center;
  border-radius: 10.457px;
  background: var(--White, #fff);
  box-shadow: 0px 2.789px 6.972px 3.486px rgba(0, 0, 0, 0.09);
  margin-bottom: 20px;
}

.orgadminchat-chat-ui-am-chat-text p {
  color: var(--Neutral-900, #0f172a);
  font-family: Lato, "Red Rose", sans-serif;
  font-size: 43.333px;
  font-style: normal;
  font-weight: 700;
  text-align: center;
  position: relative;
  top: 110px;
}

.orgadminchat-chat-hello-text h2 {
  text-align: center;
  color: #312e81;
  margin-top: 143px;
}

.orgadminchat-chat-hello-text p {
  color: var(--Black, #000);
  font-size: 16px;
  font-style: normal;
  font-weight: 600;
  line-height: 24px;
}

.orgadminchat-trending-questions {
  color: var(--Neutral-600, #475569);
  font-size: 12px;
  font-style: normal;
  font-weight: 400;
  line-height: 16px;
  text-align: center;
  margin-top: 25px;
}

.orgadminchat-trending-questions p {
  border-radius: 20px;
  border: 1px solid var(--Neutral-300, #cbd5e1);
  padding: 10px;
  margin: 5px;
  cursor: pointer;
  text-align: left;
  font-size: 12px;
  font-style: normal;
  font-weight: 400;
  margin-left: 20px;
}

.orgadminchat-question-row-first,
.orgadminchat-question-row-second {
  display: flex;
  flex-wrap: wrap;
  justify-content: left;
}

.orgadminchat-chat-arrow {
  cursor: pointer;
  width: 40px;
  margin-top: 37px;
  margin-left: -60px;
}

.orgadminchat-orgadmin-input-main input {
  margin-top: 30px;
  width: 690px;
  height: 8vh;
  border-radius: 35px;
  border: 1px solid var(--Neutral-400, #94a3b8);
  padding-right: 50px;
  padding-left: 20px;
  box-sizing: border-box;
  justify-content: center;
  align-items: center;
  margin-left: 14px;
}

.orgadminchat-orgadmin-input-main {
  display: flex;
}

.orgadminchat-chats {
  margin-top: 100px;
}

.orgadminchat-chats p {
  border-radius: 30px;
  background: var(--Neutral-800, #1e293b);
  width: 220px;
  height: 40px;
  flex-shrink: 0;
  text-align: left;
  margin-right: 18px;
  color: #e2e8f0;
  padding-left: 10px;
  cursor: pointer;
}

.orgadminchat-threedot,
.orgadminchat-threedot-two {
  position: relative;
  top: 8px;
  cursor: pointer;
}

.orgadminchat-chats h3 {
  color: #e2e8f0;
  cursor: pointer;
}

.orgadminchat-chat-header {
  display: flex;
  justify-content: space-between;
}

.orgadminchat-chat-user-welcome {
  margin-right: 20px;
}

.orgadminchat-user-name {
  color: var(--Brand-900, #312e81);
  font-size: 20px;
  font-style: normal;
  font-weight: 700;
  line-height: 36px;
  margin-left: 39px;
  position: relative;
  top: 20px;
}

.orgadminchat-chat-user-profile {
  position: relative;
  right: 20px;
}

.orgadminchat-document-icon {
  /* margin-right: 15px; */
  position: relative;
}

.vector-card-image {
  position: relative;
  margin-top: -10px;
}

.vector-image {
  width: 260px;
}

.orgadminchat-document-icon {
  width: 30px;
  height: 30px;
}

.orgadminchat-orgadmindocument-card {
  background-color: #f0f0f0;
  border: 1px solid #ccc;
  padding: 15px;
  border-radius: 8px;
  text-align: center;
  width: 82%;
  height: 18vh;
  display: flex;
  margin-left: 10px;
  margin-top: 5px;
}

.orgadminchat-orgadmindocument-card h2 {
  color: var(--Neutral-900, #0f172a);
  font-size: 1rem;
  font-style: normal;
  font-weight: 600;
  line-height: 20px;
  margin-left: 20px;
  /* margin-bottom: 35px; */
}

.document-value {
  color: var(--Neutral-900, #0f172a);
  /* font-family: Montserrat; */
  font-size: 30px;
  font-style: normal;
  font-weight: 700;
  line-height: 36px;
  margin-top: 35px;
  position: relative;
  right: 80px;
}

.orgadmin-activeuser-card {
  background-color: #f0f0f0;
  border: 1px solid #ccc;
  padding: 5px;
  border-radius: 8px;
  text-align: left;
  width: 90%;
  height: 18vh;
  margin-left: 10px;
  display: flex;
}

.orgadminchat-orgadmin-activeuser-card h2 {
  color: var(--Neutral-900, #0f172a);
  font-size: 1rem;
  font-style: normal;
  font-weight: 600;
  line-height: 20px;
  margin-left: 20px;
}

.orgadminchat-document-icon {
  width: 40px;
  height: 40px;
  margin-top: 10px;
  margin-left: 10px;
}

.activeusers-value {
  color: var(--Neutral-900, #0f172a);
  /* font-family: Montserrat; */
  font-size: 30px;
  font-style: normal;
  font-weight: 700;
  line-height: 36px;
  margin-top: 35px;
  position: relative;
  right: 80px;
}

.orgadminchat-activeuser-icon {
  width: 40px;
  height: 40px;
  margin-top: 10px;
  margin-left: 10px;
}

.orgadminchat-orgadmin-activeuser-card {
  background-color: #f0f0f0;
  border: 1px solid #ccc;
  padding: 15px;
  border-radius: 8px;
  text-align: center;
  width: 82%;
  height: 18vh;
  display: flex;
  margin-left: 10px;
}

.vector-image-activeuser {
  position: relative;
  bottom: 10px;
  margin-top: -24px;
  width: 260px;
  margin-left: 10px;
}

.orgadmin-activeuser-card {
  display: flex;
}

.orgadmin-activeuser-card {
  display: flex;
  flex-wrap: wrap;
  justify-content: space-around;
  border-radius: 10.457px;
  background: var(--White, #fff);
  height: 100%;
}

/* .orgadmin-activeuser-card,
.orgadmin-user-card {
  display: flex;
  flex-wrap: wrap;
  justify-content: space-around;
  
  border-radius: 10.457px;
  background: var(--White, #FFF);
  height: auto;
  position: relative;
  bottom: 90px;
} */

.orgadmin-user-card {
  text-align: center;
  margin: 0;
  padding: 0;
}

.orgadmin-user-card img {
  width: 100px;
  height: 100px;
  border-radius: 50%;
  object-fit: cover;
  margin-bottom: 10px;
}

.orgadmin-user-card h2 {
  margin-left: 15px;
  font-size: 16px;
  color: #333;
  font-size: 14px;
  font-weight: 400;
  line-height: 20px;
}

.orgadmin-user-card p {
  font-size: 14px;
  color: #333;
  /* Changed color from #888 to #333 */
  font-size: 10px;
  font-weight: 400;
  position: relative;
  bottom: 15px;
  left: 20px;
}

.user-table td {
  margin: 0;
  text-align: left;
}

.background-bar {
  width: 100%;
  height: 1px;
  background: var(--Neutral-300, #cbd5e1);
  margin: 4px 0;
}

.orgadminchat-chat-user-profile-main {
  display: flex;
}

.orgadminchat-chat-user-profile-image {
  margin-top: 15px;
  margin-right: 30px;
}

.orgadmin-profilepic {
  height: 40px;
  width: 40px;
}

.orgadminchat-chat-user-profile p {
  color: var(--Neutral-900, #475569);
  /* font-family: Lato; */
  font-size: 18px;
  font-style: normal;
  font-weight: 600;
  position: relative;
  bottom: 25px;
  margin-left: 15px;
}

.orgadmin-lastseen {
  position: relative;
  left: 30px;
  font-size: 12px;
  font-weight: 400;
}

.orgadmin-profile-pic {
  position: relative;
  right: 40px;
  top: 18px;
}

.orgadminchat-chat-content-head {
  display: flex;
}
.side-questions-main {
  justify-content: left;
  /* margin-left: -10px; */
}
.side-questions {
  border-radius: 30px;
  background: var(--Neutral-800, #1e293b);
  width: 180px;
  height: 40px;
  font-size: 12px;
  text-align: left;
  margin-top: 5px;
}
.side-questions p {
  position: relative;
  top: 10px;
  left: 10px;
  color: var(--Neutral-300, #cbd5e1);
}
.orgchat-icon {
  margin-left: -8px;
  margin-bottom: 10px;
}

.example_main_div {
margin-top: 100px;
display: flex;
flex-wrap: wrap;
justify-content: flex-start;
align-self: center;
margin-left: 15px;
}

.card_message_example {
  display: inline-flex;
  height: 15px;
  padding: 10px 16px;
  margin-right: 7px;
  flex-direction: row;
  /* justify-content: flex-end; */
  align-items: flex-end;
  gap: 8px;
  flex-shrink: 0;
  border-radius: 30px;
  border: 1px solid var(--Neutral-300, #cbd5e1);
  color: #475569;
  color: var(--Neutral-600, #475569);

  font-family: Into, "Lato";
  font-size: 12px;
  font-style: normal;
  font-weight: 400;
  line-height: 16px; /* 133.333% */
  /* background-color: red; */
}

.AIChatInputBox {
  padding-top: 20px;
  width: auto;
  /* min-height: 70px; */
  margin: 12px;
}


.searchStyles {
  width: 72%;
  /* height: 70px; */
  border-radius: 35px;
  border: '1px solid #94a3b8';
  color: #94a3b8;
  /* padding: auto; */
  /* padding-left: 30px; */
  font-size: 32px;
  flex-grow: 1;
  overflow-y: hidden;
  height: 70px;
  padding-top: 30px;
  /* min-height: 140px; */
  /* max-height: 'auto'; */
  background-color: rosybrown;
};

.orgadminchat_chat_ui_card {
   background-color: #312e81;
}


.footer_for_admin {
  position: absolute;
  bottom: 20px;
  width: 76%;
  margin-right: 20px;
  /* min-width: 50%;
  max-width: 78%; */
  /* width: 62vw; */
  /* height: auto;  */
}

.footer_for_user {
  position: absolute;
  bottom: 20px;
  width: 97%;
  margin-right: 20px;
  /* min-width: 50%;
  max-width: 78%; */
  /* width: 62vw; */
  /* height: auto;  */
}

.edit-button {
  /* display: flex; */
  flex-direction: row;
  justify-content: flex-start;
}

.add_styles {
  width: 90vw;
}

.user-title {
  text-align: left !important;
}

.user-profile-pic {
  height : 30px;
  width: 30px;
  border-radius: 15px;
}

.title-container {
  display: flex;
  flex-direction: row;
  justify-content: flex-start;
}

.active-table{
  margin: 0;
  text-align: left;
  width: 100%;
}

.name-text {
  font-size: 14px;
  font-weight: 600;
}

.divider {
  border-top: 1px solid #ccc; 
  width: auto
}


.activeuser-dashboard {
  background-color: #f0f0f0;
  border: 1px solid #ccc;
  padding: 5px;
  border-radius: 8px;
  width: 90%;
  height: auto;
  margin-left: 10px;
}

.title-container {
  margin-left: 10px;
  margin-top: 10px;
  margin-bottom: 10px;
}

.user-pic {
  height:35px;
  width:35px;
  border-radius: 20px;
  margin-top: 10px;
}

.content-container {
  display: flex;
  flex-direction: row;
  justify-content: flex-start;
  margin-top: 8px;
}



.content-bg {
  margin-left: 10px;
} 

.title-text {
  font-size: 18px;
  color: #333;
  font-weight: 500;
}

.lastseen-text {
  font-size: 14px;
  font-weight: 500;
  color: grey;
}

